# RSA-multilingual

./: .gitignoretab  pyproject.toml  pyproject.yml
scripts/: extract.py  mds.py  prepare_lexicon.py  rsa.py
src/rsa_multilingual/: __init__.py  extraction.py  lexicon.py  pipeline.py  rdm.py  utils.py  viz.py
